edit content and tweak layout issues for med size screen.

--- a/src/index.css
+++ b/src/index.css
@@ -78,7 +78,7 @@ a {
 .CardContainer {
 	display: grid;
 	width: 100%;
-	height: 100vh;
+	height:100vh;
 	grid-template-columns: repeat(20, 5%);
 	grid-template-rows: repeat(50, 5%);
 }
@@ -136,15 +136,19 @@ a {
 }
 #title0{
 	grid-column: 2 / span 8;
-	grid-row: 27/ span 3;
+	grid-row: 1/ span 3;
 }
 #title1{
 	grid-column: 2 / span 8;
-	grid-row: 1/ span 3;
+	grid-row: 27/ span 3;
 }
 #title2{
 	grid-column: 2 / span 8;
 	grid-row: 40/ span 3;
+}
+#pusher{
+	height:200px;
+	grid-row-start:53
 }
 /*GRID ITEMS --- BLOG PAGE */
 #blog0{
@@ -231,13 +235,9 @@ a {
 		font-size: larger;
 	}
 	#goals{
-		grid-column: 2 / span 10;
-		grid-row: 4 / span 4;
 		font-size: larger;
 	}
 	#skills{
-		grid-column: 4 / span 10;
-		grid-row: 24/ span 4;
 		font-size: larger;
 	}
 	#portfolioInfo{
